# ald-cookbook

./: CLAUDE.md  Cargo.toml  Makefile  README.md
.github/workflows/: book.yml  ci.yml
benches/: format_benchmarks.rs
book/: book.toml
book/src/: SUMMARY.md  introduction.md
book/src/appendix/: pmat-strategy.md  qa-checklist.md  toyota-way.md
book/src/concepts/: ald-format.md  iiur-principles.md  property-based-testing.md  zero-copy-loading.md
book/src/getting-started/: installation.md  project-structure.md  quick-start.md
book/src/recipes/a-dataset-creation/: create-ald-from-arrow.md  create-ald-image-dataset.md  create-ald-tabular.md  create-ald-text-corpus.md  create-ald-timeseries.md  index.md
book/src/recipes/b-loading/: index.md  load-ald-basic.md  load-ald-metadata.md
book/src/recipes/c-conversion/: convert-csv-to-ald.md  convert-parquet-to-ald.md  index.md
book/src/recipes/d-transforms/: index.md  transform-filter.md  transform-sample.md  transform-shuffle.md
book/src/recipes/e-quality/: index.md  quality-null-detection.md
book/src/recipes/f-drift/: drift-ks-test.md  drift-psi.md  index.md
book/src/recipes/g-federated/: federated-dirichlet-split.md  federated-iid-split.md  index.md
book/src/recipes/h-security/: index.md  sign-ald-ed25519.md
book/src/recipes/i-registry/: index.md  registry-publish.md  registry-pull.md
book/src/recipes/l-cli/: cli-ald-info.md  index.md
book/src/reference/: api.md  errors.md  features.md
book/src/testing/: coverage.md  extreme-tdd.md  mutation-testing.md  property-testing.md
docs/qa/: QA-TEAM-PROMPT.md  qa-checklist-100.md
docs/specifications/: ald-cookbook-spec.md
examples/cli/: cli_ald_info.rs
examples/conversion/: convert_csv_to_ald.rs  convert_parquet_to_ald.rs
examples/dataset_creation/: create_ald_from_arrow.rs  create_ald_image_dataset.rs  create_ald_tabular.rs  create_ald_text_corpus.rs  create_ald_timeseries.rs
examples/drift/: drift_ks_test.rs  drift_psi.rs
examples/federated/: federated_dirichlet_split.rs  federated_iid_split.rs
examples/loading/: load_ald_basic.rs  load_ald_metadata.rs
examples/quality/: quality_null_detection.rs
examples/registry/: registry_publish.rs  registry_pull.rs
examples/security/: sign_ald_ed25519.rs
examples/transforms/: transform_filter.rs  transform_sample.rs  transform_shuffle.rs
src/: browser.rs  context.rs  convert.rs  drift.rs  encryption.rs  error.rs  federated.rs  format.rs  lib.rs  prelude.rs  quality.rs  registry.rs  signing.rs  transforms.rs
tests/: proptest_drift.rs  proptest_format.rs  proptest_transforms.rs
