[package]
name = "ald-cookbook"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
description = "Cookbook for sharing .ald files - Isolated, Idempotent, Useful, and Reproducible dataset recipes"
repository = "https://github.com/paiml/ald-cookbook"
keywords = ["dataset", "arrow", "ml", "data-engineering"]
categories = ["data-structures", "science"]

[features]
default = []
encryption = ["aes-gcm", "argon2"]
signing = ["ed25519-dalek"]
streaming = []
browser = ["wasm-bindgen", "js-sys", "web-sys"]
hf-hub = ["hf-hub-dep"]
s3 = ["aws-sdk-s3", "aws-config"]
full = ["encryption", "signing", "streaming", "browser", "hf-hub", "s3"]

[dependencies]
# Core Arrow ecosystem
arrow = { version = "53", default-features = false, features = ["ipc", "ipc_compression", "csv", "json"] }
parquet = { version = "53", default-features = false, features = ["arrow", "zstd"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"  # MessagePack

# Compression
zstd = "0.13"

# Error handling
thiserror = "2"

# Utilities
tempfile = "3.14"
rand = { version = "0.8", features = ["std_rng"] }
crc32fast = "1.4"
uuid = { version = "1.11", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
byteorder = "1.5"

# Optional: Encryption
aes-gcm = { version = "0.10", optional = true }
argon2 = { version = "0.5", optional = true }

# Optional: Signing
ed25519-dalek = { version = "2.1", optional = true }

# Optional: WASM
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true }

# Optional: HuggingFace Hub
hf-hub-dep = { package = "hf-hub", version = "0.3", optional = true }

# Optional: S3
aws-sdk-s3 = { version = "1.65", optional = true }
aws-config = { version = "1.5", optional = true }

[dev-dependencies]
proptest = "1.5"
criterion = { version = "0.5", features = ["html_reports"] }
pretty_assertions = "1.4"
insta = { version = "1.41", features = ["json"] }
rand_distr = "0.4"
hex = "0.4"

# Category A: Dataset Creation
[[example]]
name = "create_ald_from_arrow"
path = "examples/dataset_creation/create_ald_from_arrow.rs"

[[example]]
name = "create_ald_tabular"
path = "examples/dataset_creation/create_ald_tabular.rs"

[[example]]
name = "create_ald_timeseries"
path = "examples/dataset_creation/create_ald_timeseries.rs"

[[example]]
name = "create_ald_text_corpus"
path = "examples/dataset_creation/create_ald_text_corpus.rs"

[[example]]
name = "create_ald_image_dataset"
path = "examples/dataset_creation/create_ald_image_dataset.rs"

# Category B: Loading
[[example]]
name = "load_ald_basic"
path = "examples/loading/load_ald_basic.rs"

[[example]]
name = "load_ald_metadata"
path = "examples/loading/load_ald_metadata.rs"

# Category C: Conversion
[[example]]
name = "convert_parquet_to_ald"
path = "examples/conversion/convert_parquet_to_ald.rs"

[[example]]
name = "convert_csv_to_ald"
path = "examples/conversion/convert_csv_to_ald.rs"

# Category D: Transforms
[[example]]
name = "transform_filter"
path = "examples/transforms/transform_filter.rs"

[[example]]
name = "transform_shuffle"
path = "examples/transforms/transform_shuffle.rs"

[[example]]
name = "transform_sample"
path = "examples/transforms/transform_sample.rs"

# Category E: Quality
[[example]]
name = "quality_null_detection"
path = "examples/quality/quality_null_detection.rs"

# Category F: Drift
[[example]]
name = "drift_ks_test"
path = "examples/drift/drift_ks_test.rs"

[[example]]
name = "drift_psi"
path = "examples/drift/drift_psi.rs"

# Category G: Federated
[[example]]
name = "federated_iid_split"
path = "examples/federated/federated_iid_split.rs"

[[example]]
name = "federated_dirichlet_split"
path = "examples/federated/federated_dirichlet_split.rs"

# Category H: Security
[[example]]
name = "sign_ald_ed25519"
path = "examples/security/sign_ald_ed25519.rs"
required-features = ["signing"]

# Category I: Registry
[[example]]
name = "registry_publish"
path = "examples/registry/registry_publish.rs"

[[example]]
name = "registry_pull"
path = "examples/registry/registry_pull.rs"

# Category L: CLI
[[example]]
name = "cli_ald_info"
path = "examples/cli/cli_ald_info.rs"

[[bench]]
name = "format_benchmarks"
harness = false

[profile.release]
lto = true
codegen-units = 1

[profile.dev]
opt-level = 1

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "allow", priority = -1 }
nursery = { level = "allow", priority = -1 }
# Deny specific safety-critical lints
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
